--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.17.1"
+		"cookie-session": "^1.3.3",
+		"express": "^4.17.1",
+		"mongoose": "^5.6.11",
+		"passport": "^0.4.0",
+		"passport-google-oauth20": "^2.0.0"
 	},
 	"devDependencies": {
 		"env-cmd": "^10.0.1",
