--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"express": "^4.17.1",
 		"mongoose": "^5.6.11",
 		"passport": "^0.4.0",
-		"passport-google-oauth20": "^2.0.0"
+		"passport-google-oauth20": "^2.0.0",
+		"stripe": "^7.8.0"
 	},
 	"devDependencies": {
 		"env-cmd": "^10.0.1",
