--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
 	},
 	"scripts": {
 		"start": "node src/index.js",
-		"server": "nodemon src/index.js",
-		"client": "npm run start --prefix react-massacre-mail",
-		"dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix react-massacre-mail"
+		"server": "env-cmd -f ./config/dev.env nodemon src/index.js",
+		"client": "npm run start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"concurrently": "^4.1.2",
 		"cookie-session": "^1.3.3",
 		"express": "^4.17.1",
 		"mongoose": "^5.6.11",
