--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@sendgrid/mail": "^6.4.0",
 		"concurrently": "^4.1.2",
 		"cookie-session": "^1.3.3",
 		"express": "^4.17.1",
 		"mongoose": "^5.6.11",
 		"passport": "^0.4.0",
 		"passport-google-oauth20": "^2.0.0",
+		"redux-form": "^8.2.6",
+		"sendgrid": "^5.2.3",
 		"stripe": "^7.8.0"
 	},
 	"devDependencies": {
