--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"start": "node src/index.js",
 		"server": "env-cmd -f ./config/dev.env nodemon src/index.js",
 		"client": "npm run start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\"",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+		"webhook": "lt -p 5000 -s massacremail"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,9 +23,12 @@
 		"concurrently": "^4.1.2",
 		"cookie-session": "^1.3.3",
 		"express": "^4.17.1",
+		"localtunnel": "^1.9.2",
+		"lodash": "^4.17.15",
 		"mongoose": "^5.6.11",
 		"passport": "^0.4.0",
 		"passport-google-oauth20": "^2.0.0",
+		"path-parser": "^4.2.0",
 		"redux-form": "^8.2.6",
 		"sendgrid": "^5.2.3",
 		"stripe": "^7.8.0"
